# langstage-cli

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
deepagent_code/: __init__.py  cli.py  config.py
examples/: agent.py
langstage_cli/: __init__.py  agui_stream.py  cli.py  config.py
spike/: SPIKE.md  agui_adapter.py  fake_tools.py  observe_interrupt.py  observe_tools.py  parity_check.py  parity_tools.py
tests/: __init__.py  conftest.py  test_agui_stream.py  test_async_mode.py  test_checkpointer.py  test_cli.py  test_cli_help.py  test_codeconfig.py  test_config.py  test_config_command.py  test_configurable.py  test_help_render.py  test_interrupt_non_tty.py  test_no_interactive_approve.py  test_quiet_output.py  test_rename_shim.py  test_show_config.py  test_spec_resolution.py  test_spinner_reply_survives.py  test_stream_mode.py  test_streaming_marker.py  test_terminal_width.py  test_turn_exit_and_render.py  test_unicode_console.py  test_verbose_command.py  test_verify_flag.py  test_workspace.py
