[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langstage-cli"
version = "0.6.19"
description = "The terminal stage for your LangGraph agent — Claude Code-style CLI for any CompiledGraph"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Kedar Dabhadkar", email = "kdabhadk@gmail.com"}
]
keywords = ["langgraph", "langchain", "langstage", "cli", "agents", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

dependencies = [
    "langgraph>=0.2.0",
    # Since core 1.0 (ADR 0003) the CLI streams every turn ONLY through the
    # in-process AG-UI adapter — there is no built-in parser fallback — so the
    # AG-UI runtime (ag-ui-langgraph[fastapi] + uvicorn, via core's [agui] extra)
    # is a HARD dep. A bare `pip install langstage-cli` must be able to run a turn.
    # >=1.0.6 for the shared preflight primitive core.verify() used by --verify.
    # >=1.0.14 for describe(configurable=) — the single complete config diagnostic.
    "langstage-core[agui]>=1.0.14",
    "click>=8.0.0",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff==0.15.15",
    "mypy>=1.0.0",
    # Only the bundled `examples/agent.py` (a dev sample, not shipped in the
    # wheel) uses deepagents — the CLI itself never imports it. Keep it here so
    # the example/tests run, but don't make every `pip install langstage-cli`
    # pull deepagents + langchain + langgraph.
    "deepagents>=0.3",
    # The experimental --agui path (ADR 0002); pulled into dev so CI exercises
    # tests/test_agui_stream.py instead of skipping it.
    "ag-ui-langgraph>=0.0.41",
    "fastapi",
]
# Redundant since AG-UI moved into base deps (core 1.0); kept as a no-op alias so
# existing `pip install langstage-cli[agui]` scripts/READMEs still resolve.
agui = ["langstage-core[agui]>=1.0.7"]

[project.scripts]
langstage-cli = "langstage_cli.cli:main"
# Deprecated alias command — kept for one transition window.
deepagent-code = "langstage_cli.cli:main"

[project.urls]
Homepage = "https://github.com/dkedar7/langstage-cli"
Repository = "https://github.com/dkedar7/langstage-cli"
Issues = "https://github.com/dkedar7/langstage-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["langstage_cli*", "deepagent_code*"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
# Example scripts call load_dotenv() before importing modules that read env.
"examples/*" = ["E402"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
